v2/src/markdown/snapshots/shiba_preview__markdown__parser__tests__sanitized.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "raw": "\n",
      "t": "html"
    },
    {
      "raw": "\n",
      "t": "html"
    },
    {
      "raw": "<div>hello</div>\n",
      "t": "html"
    }
  ]
}
