v2/src/markdown/snapshots/shiba_preview__markdown__parser__tests__tasklist.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "c": [
            {
              "checked": true,
              "t": "checkbox"
            },
            "this is checked"
          ],
          "t": "task-list"
        },
        {
          "c": [
            {
              "checked": false,
              "t": "checkbox"
            },
            "this is unchecked"
          ],
          "t": "task-list"
        }
      ],
      "t": "ul"
    }
  ]
}
